Lagt upp mallsidor, än så länge utan innehåll utöver title

--- a/results.html
+++ b/results.html
@@ -1,3 +1,11 @@
 results.html
 <!doctype html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>BRA JOBBAT! Här är ditt resultat!</title>
+</head>
+<body>
 
+</body>
+</html>
