--- a/start.html
+++ b/start.html
@@ -1,2 +1,11 @@
 
 <!doctype html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>STARTSIDA - QUIZINSTRUKTION</title>
+</head>
+<body>
+
+</body>
+</html>
