Försöker lägga till tabell för de olika quiztemana

--- a/quiz.html
+++ b/quiz.html
@@ -1,9 +1,8 @@
 
 <!doctype html>
-<!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Tex quiz 2 (Det quix man valt på Start)</title>
 </head>
 <body>
 
