--- a/start.html
+++ b/start.html
@@ -1,11 +1,21 @@
 
 <!doctype html>
-<!DOCTYPE html>
 <html>
 <head>
-	<title>STARTSIDA - QUIZINSTRUKTION</title>
+	<link rel="stylesheet" href="style.css">
+	<meta charset="utf-8">
+	<html lang="en">
+	<title>quiz - (Val mellan tre olika quiz)</title>
 </head>
 <body>
+
+<h1>HEJ DÄR!</h1>
+<p>Välj den quiz du vill göra här: <br>
+
+- Barcelona <br>
+- Star Wars <br>
+- Musik <br>
+</p>
 
 </body>
 </html>
