--- a/start.html
+++ b/start.html
@@ -11,11 +11,11 @@
 
 <h1>HEJ DÄR!</h1>
 <p>Välj den quiz du vill göra här: <br>
-
-- Barcelona <br>
-- Star Wars <br>
-- Musik <br>
+	<table border="5">
+			<tr><img src = "https://media.giphy.com/media/nyx0x95XJXRwk/giphy.gif" height = "450px" width="450px"></tr>
+			<tr><img src = "https://media.giphy.com/media/pWhWtKdqwOAco/giphy.gif" height = "450px" width="450px"></tr>
+			<tr><img src = "https://media.giphy.com/media/FBzqZGthkW6KQ/giphy.gif" height = "450px" width="450px"></tr>
+		</table>
 </p>
-
 </body>
 </html>
